fixed overlapping nav bar

--- a/1.Website/frontend/src/css/Dashboard.css
+++ b/1.Website/frontend/src/css/Dashboard.css
@@ -31,7 +31,7 @@ button{
     background-color: #04AA6D;
     height: auto;
      padding: 10px;
-    width: 200px;
+    width: 13vw;
     position: relative;
     font-size: 15px;
     margin-bottom: 20px;
